--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.6",
         "mailjet/laravel-mailjet": "^3.0",
         "php-open-source-saver/jwt-auth": "^2.1",
+        "phpoffice/phpspreadsheet": "^3.6",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
         "symfony/http-foundation": "^6.4",
