--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpoffice/phpspreadsheet": "^3.6",
         "pusher/pusher-php-server": "^7.2",
         "realrashid/sweet-alert": "^7.1",
+        "spatie/laravel-html": "^3.11",
         "symfony/http-foundation": "^6.4",
         "yajra/laravel-datatables": "9.0"
     },
